# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
cargo-features = ["strip"]

[package]
name = "hbr"
version = "1.0.0"
edition = "2021"

[dependencies]
dirs = "4.0.0"
webpage = "1.4.0"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
